...
                ),
          actions: [
            TextButton(
              onPressed: () {
                Navigator.of(context).pop();
              },
              child: const Text("Close"),
            ),
          ],
        );
      },
    );
  }
...
                              zoneConfig: AGConnectCloudDBZoneConfig(
                                  zoneName: _zoneName),
                            );
                          },
                        ),
                        _buildButton(
                          text: 'openCloudDBZone2',
                          onTap: () async {
                            if (_zone != null) {
                              throw FormatException(
                                  'Zone object is not null. First try close zone.',
                                  _zone);
                            }
...
                              zoneConfig: AGConnectCloudDBZoneConfig(
                                  zoneName: _zoneName),
                            );
                          },
                        ),
                        _buildButton(
                          text: 'closeCloudDBZone',
                          onTap: () async {
                            if (_zone == null) {
                              throw FormatException(
                                  'Zone object is null. First try open zone.',
                                  _zone);
                            }
...
                              policy: AGConnectCloudDBZoneQueryPolicy
                                  .POLICY_QUERY_DEFAULT,
                            );
                          },
                        ),
                        _buildButton(
                          text: 'executeMaximumQuery',
                          onTap: () async {
                            if (_zone == null) {
                              throw FormatException(
                                  'Zone object is null. First try open zone.',
                                  _zone);
                            }
...
        textAlign: TextAlign.center,
      ),
      onPressed: () async {
        try {
          setState(() => _isBusy = true);
          final dynamic result = await onTap();
          _showDialog(context, 'SUCCESS', result);
        } catch (e) {
          _showDialog(context, 'ERROR', e.toString());
        } finally {
          setState(() => _isBusy = false);
        }
      },
...
